force-app/main/default/objects/WorkOrder/fields/QI_Status__c.field-meta.xml
<CustomField>
    <fullName>QI_Status__c</fullName>
    <label>QI Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>FM QI Review (Red Hold)</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Failed — Rework Required</fullName>
                <isActive>false</isActive>
                <label>Failed — Rework Required</label>
            </value>
            <value>
                <fullName>Held - FM QI Review</fullName>
                <isActive>false</isActive>
                <label>Held - FM QI Review</label>
            </value>
            <value>
                <fullName>Not Required</fullName>
                <isActive>false</isActive>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <isActive>false</isActive>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Passed — Acceptable</fullName>
                <isActive>false</isActive>
                <label>Passed — Acceptable</label>
            </value>
            <value>
                <fullName>Passed — Excellent</fullName>
                <isActive>false</isActive>
                <label>Passed — Excellent</label>
            </value>
            <value>
                <fullName>Pending Quality Inspection</fullName>
                <isActive>false</isActive>
                <label>Pending Quality Inspection</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>