force-app/main/default/objects/WorkOrder/fields/QI_Submitted__c.field-meta.xml
<CustomField>
    <fullName>QI_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QI Submitted</label>
    <type>Checkbox</type>
</CustomField>