force-app/main/default/objects/WorkOrder/fields/QI_Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>QI_Submitted_At__c</fullName>
    <label>QI Submitted At</label>
    <type>DateTime</type>
</CustomField>