force-app/main/default/objects/WorkOrder/fields/Red_Flag_Notes__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Notes__c</fullName>
    <label>Red Flag Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>