force-app/main/default/objects/WorkOrder/fields/Red_Flag_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag_Timestamp__c</fullName>
    <label>Red Flag Timestamp</label>
    <type>DateTime</type>
</CustomField>