force-app/main/default/objects/WorkOrder/fields/Reschedule_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Notes__c</fullName>
    <label>Reschedule Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>