force-app/main/default/objects/WorkOrder/fields/Route_Distance_Miles__c.field-meta.xml
<CustomField>
    <fullName>Route_Distance_Miles__c</fullName>
    <label>Route Distance (mi)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>