force-app/main/default/objects/WorkOrder/fields/Route_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Route_Sequence__c</fullName>
    <label>Route Sequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>