force-app/main/default/objects/WorkOrder/fields/Route_Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Route_Stop_Number__c</fullName>
    <label>Route Stop #</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>