force-app/main/default/objects/WorkOrder/fields/RTN__c.field-meta.xml
<CustomField>
    <fullName>RTN__c</fullName>
    <formula>TEXT( FLOOR( (NULLVALUE(Shift_Start_Minutes__c,0) + NULLVALUE(Goal_Minutes__c,0) + NULLVALUE(Travel_Minutes__c,0) + NULLVALUE(Lunch_Minutes__c,0) + NULLVALUE(Cushion_Minutes__c,0)) / 60) ) &amp; &quot;:&quot; &amp; IF( MOD( NULLVALUE(Shift_Start_Minutes__c,0) + NULLVALUE(Goal_Minutes__c,0) + NULLVALUE(Travel_Minutes__c,0) + NULLVALUE(Lunch_Minutes__c,0) + NULLVALUE(Cushion_Minutes__c,0), 60) &lt; 10, &quot;0&quot;, &quot;&quot;) &amp; TEXT( MOD( NULLVALUE(Shift_Start_Minutes__c,0) + NULLVALUE(Goal_Minutes__c,0) + NULLVALUE(Travel_Minutes__c,0) + NULLVALUE(Lunch_Minutes__c,0) + NULLVALUE(Cushion_Minutes__c,0), 60))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RTN</label>
    <type>Text</type>
</CustomField>