force-app/main/default/objects/WorkOrder/fields/Ryan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Ryan_Start_Date__c</fullName>
    <label>Ryan Start Date</label>
    <type>Date</type>
</CustomField>