force-app/main/default/objects/WorkOrder/fields/Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Date__c</fullName>
    <description>Date we received the request. Will be on the PO we receive.</description>
    <label>Sales Date</label>
    <type>Date</type>
</CustomField>