force-app/main/default/objects/WorkOrder/fields/Schedule_Proposal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Proposal_Notes__c</fullName>
    <label>Schedule Proposal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>