force-app/main/default/objects/WorkOrder/fields/Schedule_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Proposal_Status__c</fullName>
    <label>Schedule Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Auto-Schedule</fullName>
            </value>
            <value>
                <fullName>Proposed</fullName>
            </value>
            <value>
                <fullName>Manager Approved</fullName>
            </value>
            <value>
                <fullName>Manager Rejected</fullName>
            </value>
            <value>
                <fullName>Manual Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>