force-app/main/default/objects/WorkOrder/fields/Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date__c</fullName><label>Scheduled Date</label>
<type>Date</type>
</CustomField>