force-app/main/default/objects/WorkOrder/fields/Scheduled_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Start_Time__c</fullName>
    <description>Start time for crew routing purposes.</description>
    <label>Scheduled Start Time</label>
    <type>Time</type>
</CustomField>