force-app/main/default/objects/WorkOrder/fields/Scheduling_Decision__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Decision__c</fullName>
    <label>Scheduling Decision</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>