force-app/main/default/objects/WorkOrder/fields/Scope_Outside_PO__c.field-meta.xml
<CustomField>
    <fullName>Scope_Outside_PO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope Outside PO</label>
    <type>Checkbox</type>
</CustomField>