force-app/main/default/objects/WorkOrder/fields/Service_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links multiple trade Work Orders to a single Service Appointment (many WOs per appointment).</description>
    <label>Service Appointment</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Grouped_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>