force-app/main/default/objects/WorkOrder/fields/Shift_Start_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Shift_Start_Minutes__c</fullName>
    <formula>IF(ISBLANK(Shift_Start_Time__c), 0, HOUR(Shift_Start_Time__c) * 60 + MINUTE(Shift_Start_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift Start Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>