force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>FM or crew lead who confirmed site readiness. Populated by SiteReadinessService.</description>
    <label>Site Readiness Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Work Orders (Site Readiness Completed By)</relationshipLabel>
    <relationshipName>SiteReadinessCompletedBy_WorkOrders</relationshipName>
    <type>Lookup</type>
</CustomField>