force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Completed_Date__c</fullName>
    <description>Date FM completed the site readiness check. Set by SiteReadinessService when FM marks Complete.</description>
    <label>Site Readiness Completed Date</label>
    <type>Date</type>
</CustomField>