force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Date__c</fullName>
    <description>Auto-populated to 48 hours before Scheduled_Date__c for install jobs.</description>
    <label>Site Readiness Date</label>
    <type>Date</type>
</CustomField>