force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Notes__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Notes__c</fullName>
    <description>FM observations from the 48-hour site check. Required when result is Not Ready or Waived.</description>
    <label>Site Readiness Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>