force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Result__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Result__c</fullName>
    <description>FM verdict from the 48-hour site check. Ready = proceed; Not Ready = install blocked; Waived = FM override with reason.</description>
    <label>Site Readiness Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>