force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Status__c</fullName>
    <label>Site Readiness Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Task Created</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Waived (COO Only)</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
                <isActive>false</isActive>
                <label>Complete</label>
            </value>
            <value>
                <fullName>Not Ready</fullName>
                <isActive>false</isActive>
                <label>Not Ready</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
                <isActive>false</isActive>
                <label>Scheduled</label>
            </value>
            <value>
                <fullName>Waived</fullName>
                <isActive>false</isActive>
                <label>Waived</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>