force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Waived__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when FM or COO overrides a Not Ready result and authorizes install to proceed. Requires Site_Readiness_Waiver_Reason__c.</description>
    <label>Site Readiness Waived</label>
    <type>Checkbox</type>
</CustomField>