force-app/main/default/objects/WorkOrder/fields/Site_Readiness_Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Site_Readiness_Waiver_Reason__c</fullName>
    <description>Required explanation when Site_Readiness_Waived__c = true. FM must document why install proceeds despite Not Ready status.</description>
    <label>Site Readiness Waiver Reason</label>
    <type>TextArea</type>
</CustomField>