force-app/main/default/objects/WorkOrder/fields/Site_Ready__c.field-meta.xml
<CustomField>
    <fullName>Site_Ready__c</fullName>
    <label>Site Ready</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Checked</fullName>
                <default>true</default>
                <label>Not Checked</label>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>