force-app/main/default/objects/WorkOrder/fields/Site_Visit_Quote_Link__c.field-meta.xml
<CustomField>
    <fullName>Site_Visit_Quote_Link__c</fullName>
    <label>Site Visit Quote Link</label>
    <type>Url</type>
</CustomField>