force-app/main/default/objects/WorkOrder/fields/Sod_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Sod_Square_Footage__c</fullName>
    <label>Sod Square Footage</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>