force-app/main/default/objects/WorkOrder/fields/Source_Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Source_Takeoff__c</fullName>
    <label>Source Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>Trade Work Orders</relationshipLabel>
    <relationshipName>Trade_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>