force-app/main/default/objects/WorkOrder/fields/Stop_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Stop_Sequence__c</fullName>
    <label>Stop Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>