force-app/main/default/objects/WorkOrder/fields/Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Takeoff that produced or approved this standard Field Service Work Order.</description>
    <label>Takeoff</label>
    <referenceTo>Takeoff__c</referenceTo>
    <relationshipLabel>Standard Work Orders</relationshipLabel>
    <relationshipName>Standard_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>