force-app/main/default/objects/WorkOrder/fields/Takeoff_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Approved_Date__c</fullName>
    <label>Takeoff Approved Date</label>
    <type>Date</type>
</CustomField>