force-app/main/default/objects/WorkOrder/fields/Takeoff_Completed__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Takeoff Completed</label>
    <type>Checkbox</type>
</CustomField>