force-app/main/default/objects/WorkOrder/fields/Takeoff_Date__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Date__c</fullName>
    <label>Takeoff Date</label>
    <type>Date</type>
</CustomField>