force-app/main/default/objects/WorkOrder/fields/Takeoff_FM__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff FM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Takeoff FM</relationshipLabel>
    <relationshipName>WO_Takeoff_FM</relationshipName>
    <type>Lookup</type>
</CustomField>