force-app/main/default/objects/WorkOrder/fields/Takeoff_Lighting_Units__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Lighting_Units__c</fullName>
    <label>Takeoff Lighting Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>