force-app/main/default/objects/WorkOrder/fields/Takeoff_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Mismatch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Takeoff Mismatch</label>
    <type>Checkbox</type>
</CustomField>