force-app/main/default/objects/WorkOrder/fields/Takeoff_Notes__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Notes__c</fullName>
    <label>Takeoff Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>