force-app/main/default/objects/WorkOrder/fields/Takeoff_Photo_Count__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Photo_Count__c</fullName>
    <description>Outdoor Living field execution gate: count of captured takeoff photos (minimum 1).</description>
    <label>Takeoff Photo Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>