force-app/main/default/objects/WorkOrder/fields/Takeoff_Shrubs_1G__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Shrubs_1G__c</fullName>
    <label>Takeoff Shrubs 1G</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>