force-app/main/default/objects/WorkOrder/fields/Takeoff_Shrubs_3G__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Shrubs_3G__c</fullName>
    <label>Takeoff Shrubs 3G</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>