force-app/main/default/objects/WorkOrder/fields/Takeoff_Sod_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Sod_Sqft__c</fullName>
    <label>Takeoff Sod Sq Ft</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>