force-app/main/default/objects/WorkOrder/fields/Takeoff_Status__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Status__c</fullName>
    <label>Takeoff Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Variance Flagged</fullName>
            </value>
            <value>
                <fullName>Variance Flagged - Lennar Hold</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Returned</fullName>
                <isActive>false</isActive>
                <label>Returned</label>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
                <isActive>false</isActive>
                <label>Submitted for Approval</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>