force-app/main/default/objects/WorkOrder/fields/Takeoff_Trees_15G__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Trees_15G__c</fullName>
    <label>Takeoff Trees 15G</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>