force-app/main/default/objects/WorkOrder/fields/Takeoff_Trees_30G__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Trees_30G__c</fullName>
    <label>Takeoff Trees 30G</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>