force-app/main/default/objects/WorkOrder/fields/Trade_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Trade_Sequence__c</fullName>
    <label>Trade Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>