force-app/main/default/objects/WorkOrder/fields/Travel_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Travel_Minutes__c</fullName>
    <label>Travel Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>