force-app/main/default/objects/WorkOrder/fields/Travel_Minutes_Planned__c.field-meta.xml
<CustomField>
    <fullName>Travel_Minutes_Planned__c</fullName>
    <label>Travel Minutes Planned</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>