force-app/main/default/objects/WorkOrder/fields/Travel_Variant__c.field-meta.xml
<CustomField>
    <fullName>Travel_Variant__c</fullName>
    <label>Travel Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To-Only</fullName>
            </value>
            <value>
                <fullName>From-Only</fullName>
            </value>
            <value>
                <fullName>To-and-From</fullName>
                <default>true</default>
                <label>To-and-From</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>