force-app/main/default/objects/WorkOrder/fields/Tree_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Tree_Quantity__c</fullName>
    <label>Tree Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>