force-app/main/default/objects/WorkOrder/fields/Utilities_Cleared__c.field-meta.xml
<CustomField>
    <fullName>Utilities_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilities Cleared</label>
    <type>Checkbox</type>
</CustomField>