force-app/main/default/objects/WorkOrder/fields/Variance_Hours__c.field-meta.xml
<CustomField>
    <fullName>Variance_Hours__c</fullName>
    <formula>Actual_Hours__c - Goal_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Hours (Actual - Goal)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>